# kerf

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  ROADMAP.md  RUNNING.md  STATUS.md
.github/workflows/: deploy.yml
crates/kerf-brep/: Cargo.toml
crates/kerf-brep/benches/: boolean_benchmarks.rs
crates/kerf-brep/examples/: cad_bowling_pin.rs  cad_bracket.rs  cad_gallery.rs  cad_goblet.rs  cad_lighthouse.rs  cad_pawn.rs  cad_pyramid.rs  csg_demo.rs  cylinder_resolution.rs  debug_m38.rs  debug_m38_cyl.rs  debug_m40.rs  debug_m40_phaseb.rs  debug_m40_pipe.rs  debug_union_box_shift_nested.rs  debug_union_corner.rs  import_stl_demo.rs  imported_boolean.rs  primitive_zoo.rs  readiness_matrix.rs  write_corner_boxes.rs  write_curved_inputs.rs  write_two_boxes.rs
crates/kerf-brep/src/: analytic_edge.rs  analytic_edge_detect.rs  dimension.rs  export_3mf.rs  export_gltf.rs  geometry.rs  lib.rs  mass.rs  measure.rs  mesh_import.rs  obj.rs  serde_io.rs  solid.rs  step.rs  stl.rs  tessellate.rs
crates/kerf-brep/src/booleans/: analytic_curves.rs  chord_merge.rs  classify.rs  clip.rs  edge_lookup.rs  face_polygon.rs  interior.rs  intersect.rs  mod.rs  pipeline.rs  select.rs  splice.rs  split.rs  stitch.rs  triangulate.rs
crates/kerf-brep/src/primitives/: box_.rs  capsule_faceted.rs  cone.rs  cone_faceted.rs  cylinder.rs  cylinder_faceted.rs  extrude.rs  frustum.rs  frustum_faceted.rs  mod.rs  revolve.rs  shell_planar.rs  sphere.rs  sphere_faceted.rs  torus.rs  torus_faceted.rs
crates/kerf-brep/tests/: chained_diff_repro.rs  cylinder_plane_cap.rs  readiness_algebra.rs  readiness_complex_cad.rs  readiness_curved.rs  readiness_floor.rs  readiness_geometry.rs  readiness_noisy.rs  readiness_quality.rs  readiness_robustness.rs  readiness_robustness2.rs  readiness_roundtrip.rs  readiness_stress.rs
crates/kerf-cad/: Cargo.toml  README.md
crates/kerf-cad-wasm/: Cargo.toml
crates/kerf-cad-wasm/src/: feature_kinds.rs  lib.rs
crates/kerf-cad/examples/: bolt_circle.json  bracket.json  bracket_filleted.json  countersunk_plate.json  hollow_box.json  lofted_taper.json  mug.json  multi_stage_carve.json  slot.json  star.json  tube.json
crates/kerf-cad/src/: assembly.rs  bom.rs  cache.rs  catalog.rs  equations.rs  eval.rs  feature.rs  geometric.rs  lib.rs  mass.rs  model.rs  scalar.rs  sketch.rs  solver.rs  step_import.rs  transform.rs
crates/kerf-cad/tests/: api_shape.rs  arrow_and_funnel.rs  assembly.rs  assembly_advanced.rs  assembly_completion.rs  batch_curved_compositions.rs  batch_curved_compositions_2.rs  batch_curved_compositions_3.rs  batch_curved_compositions_4.rs  batch_curved_compositions_5.rs  batch_curved_compositions_6.rs  batch_features.rs  batch_features_10.rs  batch_features_11.rs  batch_features_12.rs  batch_features_13.rs  batch_features_14.rs  batch_features_15.rs  batch_features_16.rs  batch_features_17.rs  batch_features_18.rs  batch_features_19.rs  batch_features_2.rs  batch_features_20.rs  batch_features_21.rs  batch_features_22.rs  batch_features_3.rs  batch_features_4.rs  batch_features_5.rs  batch_features_6.rs  batch_features_7.rs  batch_features_8.rs  batch_features_9.rs  capsule_pipe.rs  catalog_examples.rs  chained_fillet.rs  chamfer.rs  cli.rs  coil.rs  composed_primitives.rs  (+46 more)
crates/kerf-cad/tests/fixtures/: cube.step
crates/kerf-geom/: Cargo.toml
crates/kerf-geom/src/: curve.rs  lib.rs  surface.rs  tolerance.rs  types.rs
crates/kerf-geom/src/curves/: circle.rs  ellipse.rs  line.rs  mod.rs
crates/kerf-geom/src/intersect/: circle_circle.rs  circle_plane.rs  circle_sphere.rs  line_circle.rs  line_cone.rs  line_cylinder.rs  line_line.rs  line_plane.rs  line_sphere.rs  line_torus.rs  mod.rs  plane_cylinder.rs  plane_plane.rs  plane_sphere.rs  poly.rs  sphere_sphere.rs
crates/kerf-geom/src/surfaces/: cone.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs  torus.rs
crates/kerf-geom/tests/: trait_smoke.rs
crates/kerf-topo/: Cargo.toml
crates/kerf-topo/src/: build.rs  entity.rs  euler.rs  id.rs  lib.rs  solid.rs  validate.rs
crates/kerf-topo/tests/: proptest_euler.rs
docs/: FEATURE_CATALOG.md  RECOVERY_PR_MAP.md  TUTORIAL.md  WALKTHROUGH_MUG.md  WASM_SIZE.md  readiness.md  readiness.txt
scripts/: render_captioned.py  render_shaded.py  render_stl.py  score.sh
viewer/: README.md  build-wasm.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
viewer/public/examples/: bracket_filleted.json  chamfered_block.json  hex_nut.json  hex_prism.json  mug.json  mug_donut_only.json  multi_stage_carve.json  pyramid.json  sketch_rectangle.json
viewer/src/: bom.test.ts  bom.ts  catalog.ts  configurations.test.ts  configurations.ts  detail-view.test.ts  detail-view.ts  dimension-layout.test.ts  dimension-layout.ts  dimensions.test.ts  dimensions.ts  drawings.ts  feature-tree-context.test.ts  feature-tree-context.ts  feature-tree-ops.test.ts  feature-tree-ops.ts  file-system.test.ts  file-system.ts  gdt.test.ts  gdt.ts  hole-table.test.ts  hole-table.ts  main.ts  mass-properties.test.ts  mass-properties.ts  mass-units.test.ts  mass-units.ts  overlay.ts  pick-filter.test.ts  pick-filter.ts  pick-history.test.ts  pick-history.ts  pick-loops.test.ts  pick-loops.ts  picking-fillet.test.ts  picking-fillet.ts  picking-state.test.ts  picking-state.ts  property-manager.test.ts  property-manager.ts  (+27 more)
viewer/src-tauri/: Cargo.toml  tauri.conf.json
viewer/src/__tests__/: catalog.test.ts  overlay.test.ts  state.test.ts
