[workspace]
resolver = "2"
members = ["crates/kerf-geom", "crates/kerf-topo", "crates/kerf-brep"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Amy Zhou <amy.zhou@vizcom.com>"]
repository = "https://github.com/amywork777/kerf"

[workspace.dependencies]
nalgebra  = { version = "0.33", features = ["serde-serialize"] }
thiserror = "1"
approx    = "0.5"
proptest  = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
