[package]
name = "kerf-brep"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kerf-geom  = { path = "../kerf-geom" }
kerf-topo  = { path = "../kerf-topo" }
slotmap    = { version = "1.0", features = ["serde"] }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
