[package]
name        = "kerf-cad"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Parametric CAD layer over the kerf B-rep kernel: declarative model trees, JSON save/load, CLI evaluator."

[lib]
name = "kerf_cad"
path = "src/lib.rs"

[[bin]]
name = "kerf-cad"
path = "src/bin/kerf_cad.rs"

[dependencies]
kerf-geom = { path = "../kerf-geom" }
kerf-brep = { path = "../kerf-brep" }
nalgebra  = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx    = { workspace = true }
