[package]
name = "kerf-geom"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
nalgebra  = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx   = { workspace = true }
proptest = { workspace = true }
