[package]
name = "kerf-topo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
slotmap   = { version = "1.0", features = ["serde"] }
thiserror = { workspace = true }
serde     = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
