[package]
name = "kerf-cad-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "kerf_cad_viewer_lib"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "kerf-cad-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
